project run to telegram bot web app

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,12 @@ html {
   @apply bg-yellow;
 }
 
+body {
+  background-color: #ffffff;
+}
+
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
